--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.12",
     "@mui/material": "^5.14.12",
+    "@mui/styled-engine-sc": "^5.14.12",
+    "@mui/system": "^5.14.12",
     "emoji-mart": "^5.5.2",
     "firebase": "^10.4.0",
     "react": "^18.2.0",
@@ -25,7 +27,8 @@
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
-    "react-scrollable-feed": "^1.3.2"
+    "react-scrollable-feed": "^1.3.2",
+    "styled-components": "^5.3.11"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
